--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,3 +20,13 @@ jobs:
 
     - name: Build
       run: go build -v ./...
+  release-linux-amd64:
+    name: release linux/amd64
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: wangyoucao577/go-release-action@v1.14
+      with:
+        github_token: ${{ secrets.GITHUB_TOKEN }}
+        goos: linux
+        goarch: amd64
